@@ -22,13 +22,15 @@ in the protocol vector.
 <p>
 Getter methods are characterized as follows:
 <ul>
-<li> their return type is not void; </li>
+<li> their return type is a primitive numeric type
+(int, long, float or double); </li>
 <li> their argument list is empty.
 </ul>
 <p>
 Setter methods are characterized as follows:
 <ul>
 <li> their return type is void; </li>
-<li> their argument list is composed by exactly one parameter.
+<li> they have exactly one argument of a primitive numeric type (int, long,
+float, double).
 </ul>
 </body></html>
